RESOLVED FIXED260082
bankofamerica.com - Loading icon still present when navigating back after failing log in
https://bugs.webkit.org/show_bug.cgi?id=260082
Summary bankofamerica.com - Loading icon still present when navigating back after fai...
Chris Dumez
Reported 2023-08-11 13:40:39 PDT
On bankofamerica.com, if you attempt to log in with invalid credential and then navigate back, the "log in" will still be shown as "Loading ...". Steps To Reproduce: 1. Enter incorrect credentials when logging into bankofamerica.com 2. Click the back button to navigate to the previous page 3. Loading … will appear until refreshed
Attachments
Chris Dumez
Comment 1 2023-08-11 13:40:46 PDT
Chris Dumez
Comment 2 2023-08-11 13:46:25 PDT
EWS
Comment 3 2023-08-14 22:33:48 PDT
Committed 266898@main (c6859d32429f): <https://commits.webkit.org/266898@main> Reviewed commits have been landed. Closing PR #16616 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.